Bug 418766: Use width, not height, as a quick proxy for whether a line is empty. r+sr=roc, a=beltzner